	(even in packages with name spaces).  By default detach()
	prevents such dependencies from being detached: this can be
	overridden by the argument 'force'.

    o	bquote() has been extended to work on function definitions
	(wish of PR#14031).

    o	detach() when applied to an object other than a package
	returns the environment that has been detached.


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() (which was deprecated in 2.10.0) is no longer
	exported and has a different argument list.


BUG FIXES

    o	Using with(), eval() etc with a list with some unnamed
	elements now works. (PR#14035)




	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.0 patched


NEW FEATURES

    o	The PCRE library has been updated to version 8.00.

    o	R CMD INSTALL has new options --no-R, --no-libs, --no-data,
	--no-help, --no-demo, --no-exec, and --no-inst to suppress
	installation of the specified part of the package.  These are
	intended for special purposes (e.g. building a database
	of help pages without fully installing all packages).


INSTALLATION

    o	configure will be able to find a usable libtiff in some rare
	circumstances where it did not previously (where libtiff
	needed to be linked explicitly against -ljpeg).


DEPRECATED & DEFUNCT

    o	The 'extended' argument is deprecated in strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() (not just the
	value extended = FALSE) and will be removed in R 2.11.0.


BUG FIXES

    o	trigamma(x) and other psigamma(x, n) calls are now accurate for
	very large abs(x). (PR#14020)
